reglage de bugs sur le carousel, modification du z-index du header au lieu du carousel

--- a/v1/styles/photos.css
+++ b/v1/styles/photos.css
@@ -9,7 +9,6 @@ section#photos {
 
 section#photos {
   width: 100vw;
-  z-index: -1;
 }
 
 #carousel {
