--- a/v2/styles/header.css
+++ b/v2/styles/header.css
@@ -7,6 +7,7 @@ header{
     justify-content:center;
     background-color: rgb(0, 0, 0);
     box-sizing: border-box;
+    z-index: 1;
 }
 
 header h2{
